# claude-zxf-skills

./: .gitignore  README.md
claude-code/zxf-classify/: SKILL.md
claude-code/zxf-classify/references/: heuristic_v2.md
claude-code/zxf-classify/scripts/: classify.py  progress.py
claude-code/zxf-structure/: SKILL.md
claude-code/zxf-structure/references/: flow.md
claude-code/zxf-structure/scripts/: pipeline.py
portable/: .env.example  README.md  pyproject.toml
portable/adapters/claude-code/: SKILL.md
portable/adapters/codex/: prompt.md
portable/adapters/opencode/: agent.md
portable/config/: models.yaml  whitelist.yaml
portable/prompts/: phase_dialog_haiku.md  phase_monolog.md  refine.md  segment_refine.md
portable/zxf_runner/: __init__.py  __main__.py  classify.py  config.py  index.py  llm.py  prepare.py  reconcile.py  segment.py  structure.py  validate.py
